--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1><strong>2026 Winter Olympics Encyclopedia</strong></h1>
+    <h1><strong>2026 Winter Olympics</strong></h1>
     <p>All information and photos on this webpage were sourced from <a href="https://en.wikipedia.org/wiki/2026_Winter_Olympics">https://en.wikipedia.org/wiki/2026_Winter_Olympics</a></p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/2026_Winter_Olympics_logo.svg/420px-2026_Winter_Olympics_logo.svg.png" alt="2026 Winter Olympics Logo taken from Wikipedia page">
 <header>
