--- a/wa/wa7/wa7.html
+++ b/wa/wa7/wa7.html
@@ -18,6 +18,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="image0.jpeg">
+    <img src="image0.jpeg" alt="a random beach in punta cana">
 </body>
 </html>
