--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ica12.css">
-    <title>In Class Assignment Week 12</title>
+    <link rel="stylesheet" href="wa12.css">
+    <title>Quote Machine P2: Electric Boogaloo</title>
 </head>
 <body>
     <div class="app">
@@ -24,6 +24,6 @@
           <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
         </section>
       </div>
-      <script src="ica12.js"></script>
+      <script src="wa12.js"></script>
 </body>
 </html>
