--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="wa12.css">
     <title>Quote Machine P2: Electric Boogaloo</title>
     <link rel="stylesheet" href="https://use.typekit.net/tmy8bek.css">
+</head>
 <body>
   <div class="inbox">
     <div class="app">
@@ -32,7 +33,7 @@
         </section>
       </div>
       <script src="wa12.js"></script>
-      </div>
+      
       <p class = "outsideText">I implemented a second API that generates a random dog picture at the same time a new joke is loaded. This required a fair bit of adjusting in CSS as the container box needs to dynamically adjust its vertical height in order to fit all content, especially since each joke and picture combination take up a different amount of space.</p>
 </body>
 </html>
