--- a/wa/wa13/wa13.html
+++ b/wa/wa13/wa13.html
@@ -6,6 +6,7 @@
     <title>Weekly Assignment 13: Human Resources</title>
 </head>
 <body>
+    <h1>Right Click and Select "Inspect" to See My Answers!</h1>
     <script src="wa13.js"></script>
 </body>
 </html>
